# polaris-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  setup-help.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/desktop/: PRODUCT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
deploy/docker/: README.md  compose.external-ollama.yaml  compose.secrets.yaml  config.example.json
docs/: architecture.md  design-rationale.md  durability.md  memory.md  scheduler.md  secrets.md  security.md  upstream-hermes.md
docs/channels/: slack.md  telegram.md
docs/experiments/: 100-stars.md
docs/korean/: README.md
docs/providers/: foundry-model-router.md  ollama.md
examples/: README.md  config.foundry-router-entra.json  config.foundry-router-key.json  config.ollama-harness.json  config.ollama.json  config.slack.json  config.telegram.json  scheduled-job.request.json
examples/fanout/: README.md  run.sh  workers.json
examples/scheduler/: README.md
provenance/: hermes-port.json
scripts/demo/: README.md  create_fixture.py
src/polaris/: __init__.py  artifacts.py  config.py  factory.py  paths.py  secrets.py  service.py
tests/: test_package.py
tests/api/: test_app.py
tests/cli/: test_cli.py  test_cli_packaging.py  test_client.py  test_daemon_main.py
tests/coverage/: test_artifact_backup_edges.py  test_journal_edges.py  test_provider_codec_model_edges.py  test_tool_edges.py
tests/crash/: test_agent_runtime_crash_windows.py  test_channel_crash_windows.py  test_ensemble_recovery.py  test_journal_recovery.py  test_scheduler_recovery.py  test_slack_crash_windows.py
tests/integration/: test_agent_runtime_recovery.py  test_docker_assets.py  test_ensemble_research.py  test_memory_journal.py  test_process_cancellation.py  test_scheduler_store.py  test_slack_persistence.py  test_telegram_adapter.py  test_v02_service_integration.py
tests/provider_contract/: test_foundry_router.py  test_providers.py
tests/security/: test_channel_authorization.py  test_memory_security.py  test_slack_authorization.py
tests/unit/: test_agent_runtime.py  test_artifacts.py  test_backup.py  test_channel_formatting.py  test_channel_processor.py  test_channel_store.py  test_config_factory.py  test_ensemble_models.py  test_filesystem_tool.py  test_http_search_tools.py  test_journal.py  test_memory_store.py  test_memory_tools.py  test_provider_registry.py  test_scheduler_core.py  test_scheduler_engine.py  (+6 more)
(+92 files in other folders)
