[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "polaris-agent-runtime"
version = "0.1.0"
description = "A durable local agent runtime with auditable ensemble research."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
  { name = "Hyeon Sang Jeon", email = "wingnut0310@gmail.com" },
]
keywords = [
  "agent",
  "ollama",
  "azure-ai-foundry",
  "deep-research",
  "durable-execution",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cryptography>=45,<50",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "rich>=14,<16",
  "typer>=0.16,<1",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
azure = ["azure-identity>=1.25,<2"]

[project.scripts]
polaris = "polaris.cli.main:main"
polarisd = "polaris.daemon.main:main"

[project.urls]
Homepage = "https://github.com/hyeonsangjeon/polaris-agent"
Issues = "https://github.com/hyeonsangjeon/polaris-agent/issues"
Source = "https://github.com/hyeonsangjeon/polaris-agent"

[dependency-groups]
dev = [
  "build>=1.2,<2",
  "mypy>=1.16,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.0,<2",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/polaris"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=polaris --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["polaris"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
